--- a/static/css/base_personInfo.css
+++ b/static/css/base_personInfo.css
@@ -1,20 +1,17 @@
 .nav-bar {
     display: flex;
-    justify-content: center;
+    /*justify-content: center;*/
     align-items: center;
     flex-direction: row;  /* 使元素在nav-bar中垂直排列 */
     /* Added transition for smooth changes */
     transition: all 0.3s ease-in-out;
 }
 
-body {
+.main{
     display: flex;
     justify-content: center;
     align-items: center;
-    /*flex-wrap: wrap;*/
-    flex-direction: column;  /* 使元素在body中垂直排列 */
-    /* Setting a minimum height to ensure all contents are visible */
-    min-height: 100vh;
+    flex-direction: column;
 }
 
 .nav-bar button {
@@ -50,30 +47,27 @@ body {
 }
 
 .container input {
-    width: 300px;
-    height: 30px;
-    font-size: 1.1rem; /* Modified to relative units */
-    /* Added border radius for smoother input fields */
-    border-radius: 8px; /* Added */
+    font-size: 1.125rem;
+    margin: 1rem 0;
+    border-radius: 5px;
+    height: 2rem;
 }
 
 .container button {
     background-color: #007bff;
     color: #fff;
     border: none;
-    /* Increased border radius for a smoother look */
-    border-radius: 15px; /* Modified */
-    padding: 1rem 2rem; /* Modified to relative units */
-    cursor: pointer;
-    font-size: 1.1rem; /* Modified to relative units */
+    border-radius: 10px;
+    padding: 0.75rem 1.5rem;
+    cursor: pointer; /* 手型指针 */
+    font-size: 1.25rem;
     text-align: center;
-    margin: 1rem 0; /* Modified to relative units */
-    /* Added transition for smooth hover effect */
-    transition: all 0.3s ease-in-out;
+    transition: background-color 0.3s, color 0.3s; /* 过渡效果 */
 }
 
 .container button:hover {
     background-color: white;
     color: #007bff;
     font-style: italic;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
