--- a/static/css/shop.css
+++ b/static/css/shop.css
@@ -9,8 +9,8 @@
 .item {
     flex-basis: calc(45%);
     margin-bottom: 20px;
-    border: 5px solid #ccc;
-    border-radius: 5px;
+    /*border: 5px solid #ccc;*/
+    border-radius: 10px;
     padding: 10px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     background-color: #fff;
@@ -22,12 +22,14 @@
     cursor: pointer;
 }
 .item div{
-    border: black 2px solid;
+    /*border: black 2px solid;*/
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: lightgrey;
+    border-radius: 10px;
+    background: linear-gradient(to right, #f2f2f2, #e6e6e6);
     font-size: 20px;
 }
+
 .item div:first-child{
     border: none;
     margin-top: 20px;
@@ -35,10 +37,10 @@
     background-color: white;
 }
 
-
 .item img {
     width: 400px;
     height: 400px;
+    border-radius: 10px;
     border: 5px;
 }
 
