--- a/static/css/base_begin.css
+++ b/static/css/base_begin.css
@@ -1,6 +1,10 @@
+/*
+    This file contains the basic style of the begin page of the website
+ */
+
 .left-box {
-    flex: 2; /* left-box比right-box宽 */
-    height: 70vh; /* 使用视口高度单位，保证响应性 */
+    flex: 2;
+    height: 70vh;
     border: 2px black solid;
     position: relative;
     background: linear-gradient(to bottom, #FFFFFF, #E0E0E0);
@@ -11,19 +15,23 @@
 }
 
 .left-box img {
-    width: 100%; /* 图片宽度与父元素left-box相同 */
-    height: 100%; /* 图片高度与父元素left-box相同 */
-    object-fit: cover; /* 图片将尽可能大，同时保持其宽高比，并将多余部分裁剪掉 */
-    position: absolute; /* 绝对定位使图片充满整个left-box */
+    width: 100%;
+    height: 100%;
+    /* keep the aspect ratio of the image, cut the extra part */
+    object-fit: cover;
+    /* set the image fill the left-box */
+    position: absolute;
     top: 0;
     left: 0;
 }
 
 .right-box {
-    flex: 1; /* right-box宽度是left-box的一半 */
-    height: 70vh; /* 使用视口高度单位，保证响应性 */
+    /* let the right-box take up the rest space */
+    flex: 1;
+    height: 70vh;
     border: 2px black solid;
 
+    /* set the background color */
     background-color: #e0ffff;
     background-image: linear-gradient(90deg, #e0ffff 0%, #ffffff 100%);
 
@@ -33,10 +41,13 @@
     overflow: hidden;
     padding: 2%;
 
-    display: flex;           /* 设置为flex容器 */
-    justify-content: center; /* 水平居中 */
-    align-items: center;     /* 垂直居中 */
-    flex-direction: column;  /* 子元素垂直排列 */
+    display: flex;
+    /* center the content on the cross axis */
+    justify-content: center;
+    /* center the content on the main axis */
+    align-items: center;
+    /* make the content vertical */
+    flex-direction: column;
 }
 
 .back-button-box .back-button {
@@ -50,6 +61,8 @@
     text-align: center;
     margin-left: 10px;
     margin-top: 20px;
+
+    /* set the background color to gradient */
     background: linear-gradient(to right, #007bff, #0056b3);
     transition: background-color 0.3s ease, color 0.3s ease;
 }
