--- a/templates/base_begin.html
+++ b/templates/base_begin.html
@@ -1,3 +1,21 @@
+{#
+    This HTML file is page for files login.htlm & register.html to extends.
+    It declare some basic style and constructure of those files.
+    It has such funtions:
+    1. get_session (Extends)
+    2. get_user_info
+    3. render_add
+    4. add_item
+    5. upload_item_img
+
+    Using js:
+    1. alert.js (Extends)
+    2. get_user_image.js (Extends)
+
+    JS functions:
+    1. get_user_image (Extends)
+    2. alert_message (Extends)
+#}
 {% extends "base.html" %}
 
 {% block main %}
