--- a/templates/base_personInfo.html
+++ b/templates/base_personInfo.html
@@ -1,3 +1,20 @@
+{#
+    This HTML file is page for files buyerInfo.htlm & sellerInfo.html to extends.
+    It declare some basic style and constructure of those files.
+    It has such funtions:
+    1. get_session (Extends)
+    2. log_out
+
+    Using js:
+    1. alert.js (Extends)
+    2. get_user_image.js (Extends)
+    3. render_user_info.js
+
+    JS functions:
+    1. get_user_image (Extends)
+    2. alert_message (Extends)
+    3. render_user_info
+#}
 {% extends "base.html" %}
 
 {% block main %}
