--- a/templates/comment.html
+++ b/templates/comment.html
@@ -1,3 +1,28 @@
+{#
+    This HTML file is page for users who have already logged in to inspect comment.
+    Buyers can also upload their comments.
+    It has such funtions:
+    1. get_session (Extends)
+    2. get_comment
+    3. render_next_page_button
+    4. render_prev_page_button
+    5. get_prev_page
+    6. get_next_page
+    7. render_self_comment_box
+    8. create_comment
+
+    Using js:
+    1. alert.js (Extends)
+    2. get_user_image.js (Extends)
+    3. render_comment.js
+    4. is_item_match_seller.js
+
+    JS functions:
+    1. get_user_image (Extends)
+    2. alert_message (Extends)
+    3. render_comment
+    4. is_item_match_seller
+#}
 {% extends "base.html" %}
 
 {% block css %}
