--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,15 @@
 {#
     This HTML file is page for user to login.
     It has such funtions:
-    1. login
+    1. get_session (Extends)
+    2. login
+    Using js:
+    1. alert.js (Extends)
+    2. get_user_image.js (Extends)
+
+    JS functions:
+    1. get_user_image (Extends)
+    2. alert_message (Extends)
 #}
 
 {% extends "base_begin.html" %}
