--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,15 @@
 {#
     This HTML file is page for user to register.
     It has such funtions:
-    1. register
+    1. get_session (Extends)
+    2. register
+    Using js:
+    1. alert.js (Extends)
+    2. get_user_image.js (Extends)
+
+    JS functions:
+    1. get_user_image (Extends)
+    2. alert_message (Extends)
 #}
 {% extends "base_begin.html" %}
 
