--- a/templates/sellerInfo.html
+++ b/templates/sellerInfo.html
@@ -1,16 +1,23 @@
 {#
-    This HTML file is page for seller to check its.
+    This HTML file is page for seller to check and modify their information.
+    Seller can also add items in this page.
     It has such funtions:
-    1. get_user_info
-    2. render_add
-    3. add_item
-    4. upload_item_img
+    1. get_session (Extends)
+    1. log_out (Extends)
+    2. get_user_info
+    3. render_add
+    4. add_item
+    5. upload_item_img
 
     Using js:
-    1. render_user_info.js
+    1. alert.js (Extends)
+    2. get_user_image.js (Extends)
+    3. render_user_info.js (Extends)
 
     JS functions:
-    render_user_info
+    1. get_user_image (Extends)
+    2. alert_message (Extends)
+    3. render_user_info (Extends)
 #}
 
 {% extends "base_personInfo.html" %}
